--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -6,9 +6,13 @@ $body-font-size: 16px;
 $body-bg-color:$primary-color;
 $footer-bg-color:$secondary-color;
 
+$mobile-body-font-size: 14px;
+
 $content-max-width:978px;
 
 $masthead-vpadding: 25px;
 $masthead-hpadding: 50px;
+
+$content-hpadding: 1.4em;
 
 $shadow: drop-shadow(4px 4px 8px rgba(0,0,0,.25));
