--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -1,8 +1,8 @@
 $primary-color:#B10017;
 $secondary-color:#DB1F27;
 
-$body-fontfamily:'Unity Text', Helvetica, Arial, sans-serif;
-$header-fontfamily:'Unity Headline', Helvetica, Arial, sans-serif;
+$body-fontfamily:/*'Unity Text',*/ Helvetica, Arial, sans-serif;
+$header-fontfamily:/*'Unity Headline',*/ Helvetica, Arial, sans-serif;
 
 $body-font-color:white;
 $body-font-size: 16px;
