--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -1,6 +1,37 @@
 $primary-color:#B10017;
 $secondary-color:#DB1F27;
 
+$coke-primary-color:#B10017;
+$coke-secondary-color:#DB1F27;
+$coke-font-heading-color:#FFFFFF;
+$coke-font-footer-color:#FFFFFF;
+$coke-button-background-color:#FFFFFF;
+$coke-button-font-color:#000000;
+$coke-border-color:#db1f27;
+$coke-prize-border-color:#db1f27;
+$coke-prize-pagination-color:#db1f27;
+
+$sprite-primary-color:#009739;
+$sprite-secondary-color:#C6C6C6;
+$sprite-font-heading-color:#FFD100;
+$sprite-font-footer-color:#039539;
+$sprite-button-background-color:#FFFFFF;
+$sprite-button-font-color:#039539;
+$sprite-border-color:#01722E;
+$sprite-prize-border-color:#FFFFFF;
+$sprite-prize-pagination-color:#FFD100;
+
+$fanta-primary-color:#F7941E;
+$fanta-secondary-color:#77BC1F;
+$fanta-font-heading-color:#FFFFFF;
+$fanta-font-footer-color:#FFFFFF;
+$fanta-button-background-color:#000F8B;
+$fanta-button-font-color:#FFFFFF;
+$fanta-border-color:#FFFFFF;
+$fanta-prize-border-color:#FFFFFF;
+$fanta-prize-pagination-color:#000F8B;
+
+
 $body-fontfamily: 'Unity Text',Helvetica, Arial, sans-serif;
 $header-fontfamily: 'Unity Headline', Helvetica, Arial, sans-serif;
 
