--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -1,8 +1,8 @@
 $primary-color:#B10017;
-$secondary-color:#DB1F27;
+$secondary-color:#de0a1c;
 
 $coke-primary-color:#B10017;
-$coke-secondary-color:#DB1F27;
+$coke-secondary-color:#de0a1c;
 $coke-font-heading-color:#FFFFFF;
 $coke-font-footer-color:#FFFFFF;
 $coke-button-background-color:#FFFFFF;
@@ -34,6 +34,7 @@ $fanta-prize-pagination-color:#000F8B;
 
 $body-fontfamily: 'Unity Text',Helvetica, Arial, sans-serif;
 $header-fontfamily: 'Unity Headline', Helvetica, Arial, sans-serif;
+$tagline-fontfamily: 'Unity Condensed';
 
 $body-font-color:white;
 $body-font-size: 16px;
@@ -43,7 +44,7 @@ $footer-bg-color:$secondary-color;
 
 $mobile-body-font-size: 14px;
 
-$content-max-width:1185px;
+$content-max-width:1280px;
 
 $masthead-vpadding: 25px;
 $masthead-hpadding: 50px;
