--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -5,6 +5,7 @@ $coke-primary-color:#B10017;
 $coke-secondary-color:#de0a1c;
 $coke-font-heading-color:#FFFFFF;
 $coke-font-footer-color:#FFFFFF;
+$coke-footer-background-color:#1d1d1b;
 $coke-button-background-color:#FFFFFF;
 $coke-button-font-color:#000000;
 $coke-border-color:#db1f27;
