--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -141,6 +141,8 @@ footer{
   bottom: -30px;
   left: 0px;
   right: 0px;
+  max-width: 1050px;
+  margin: auto;
   overflow: visible;
   @media only screen and (max-width: 767px) {
     bottom: -15px;
@@ -238,7 +240,7 @@ footer{
     justify-content: center;
     align-items: center;
     height:100%;
-    padding:0 2em;
+    padding:10px 50px;
 
     >*{
       position: relative;
@@ -955,6 +957,10 @@ form {
           font-size: 30px;
           margin-bottom: 20px;
         }
+        p{
+          padding-right: 8px;
+          padding-left: 8px;
+        }
     }
   }
  
@@ -997,6 +1003,11 @@ form {
               font-size: 20px;
               margin-bottom: 0px;
             }
+            p{
+              padding-right: 0px;
+              padding-left: 0px;
+            }
+          
         }
       }
     }
@@ -1050,4 +1061,45 @@ form {
     padding-bottom: 20px;
   }
 }
+.black-red-border{
+  background-color: #1d1d1b;
+  border:solid 20px $coke-secondary-color;
+  @media only screen and (max-width: 600px) {
+    border:solid 10px $coke-secondary-color;
+  }
+}
 
+
+.myrewards{
+  .wrapper{
+    width: 100%;
+    max-width:500px ;
+
+    margin-left: auto;
+    margin-right:auto;
+    position: relative;
+}
+  .wrapper .title{
+     margin-top: 80px;
+     margin-bottom: 150px;
+     font-size: 20px;
+     @media only screen and (max-width: 600px) {
+      margin-top: 60px;
+      margin-bottom: 80px;
+      font-size: 16px;
+    }
+     z-index: 1;
+     
+     text-align: center;
+ }
+  .background-image{
+     position: absolute;
+     top:0px;
+     z-index: 0;
+}
+  .rewards-area{
+    justify-content: center;
+    align-items: center;
+    max-width: 400px;
+}
+}
