--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -32,6 +32,7 @@ html,body{
   @include column;
   justify-content: space-between;
 }
+
 .wrapper{
   @include column;
   align-items: center;
@@ -44,8 +45,8 @@ html,body{
 }
 
 .center{
-  justify-content: center;
-  align-items: center;
+  justify-content: center !important;
+  align-items: center !important;
 }
 
 a{
@@ -114,7 +115,7 @@ footer{
   position: relative;
   @include column;
   align-items: center;
-  background:$footer-bg-color;
+  background-color:$coke-footer-background-color;
   text-align: center;
   width:100%;
   padding:1em;
@@ -1069,6 +1070,10 @@ form {
   }
 }
 
+.black-background{
+  background-color: #1d1d1b;
+ 
+}
 
 .myrewards{
   .wrapper{
@@ -1102,4 +1107,108 @@ form {
     align-items: center;
     max-width: 400px;
 }
+}
+
+.prize-chance{
+  overflow-x: hidden;
+  min-height: 100vh;
+  .wrapper{
+    margin-top: auto;
+    margin-bottom: auto;
+    .prize-title,.prize-note-two{
+      z-index: 1;
+      overflow: visible;
+      position: relative;
+    }
+
+    .prize-inner-wrapper{
+      width: 100%;
+      max-width: 900px;
+      margin-left: auto;
+      margin-right: auto;
+      text-align: center;
+      .prize-button-area{
+        text-align: center;
+      }
+      .prize-background-two{
+        position: absolute;
+        top: -55%;
+        left: -10%;
+        z-index: 0;
+        @media only screen and (max-width: 600px) {
+          top: -5%;
+        }
+      }
+      .prize-note-two{
+        width: 250px;
+        text-align: center;
+        margin: auto;
+        padding-top: 30px;
+        padding-bottom: 30px;
+
+      }
+      
+      .prize-content{
+        min-height:100px;
+        margin-top: 30px;
+        overflow: visible;
+        z-index: 1;
+        position: relative;
+       
+        .prize-desc-wrapper{
+          justify-content: center;
+          align-items: center; 
+          margin: auto;
+          .prize-background{
+            position: absolute;
+            @media only screen and (max-width: 1000px) {
+              top: 0px;
+            }
+            top: 10px;
+            z-index: -1;
+          }
+          .prize-desc{
+            max-width: 300px;
+            margin: auto;
+            z-index: 1;
+            .desc-text{
+             
+              margin-right: 40px;
+              @media only screen and (max-width: 700px) {
+                margin-right: 10px;
+              }
+              h1{
+                padding-bottom: 10px;
+                @media only screen and (max-width: 600px) {
+                  font-size: 14px;
+                }
+              }
+              p{
+                padding-top: 10px;
+                font-weight: bold;
+              }
+            }
+        
+          }
+         
+        }
+        
+      }
+      .prize-note{
+        margin-top: 30px;
+        margin-bottom: 30px;
+        line-height: 40px;
+      }
+      .theme--light.v-btn.v-btn--has-bg {
+        background-color: red;
+        color:#fff;
+        padding: 30px;
+      }
+
+    }
+   
+  
+
+  }
+
 }
