--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -947,6 +947,7 @@ form {
        margin-bottom: 0px;
        .participate-image{
          max-height: 150px;
+         max-width: 100%;
        }
     }
     .participate-text-container{
