--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -373,7 +373,11 @@ footer{
 
 .prize-item{
   position: relative;
-  border: 10px solid $secondary-color;
+  .prize-item-content{
+    padding: 10px;
+    background-color:$secondary-color;
+  } 
+ 
   .this-week-prize{
     position: absolute;
     left: calc(50% - 100px);
@@ -381,7 +385,7 @@ footer{
       left: calc(50% - 80px);
     }
     right: 0px;
-    top:-25px;
+    top:-15px;
     p{
       background-color:$secondary-color;
       padding: 10px;
