winner list done

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -810,7 +810,7 @@ form {
       }
     }
     .box{
-      background-color:$coke-secondary-color;
+      background-color: #1d1d1b;
       color:$coke-font-footer-color;
       border-color: $coke-border-color;
     }
@@ -917,7 +917,7 @@ form {
   overflow: visible;
 }
 
-.campaign-period-section{
+.campaign-period-section, .winner-details{
 
   padding-bottom: 80px !important;
   .tagline{
@@ -978,7 +978,7 @@ form {
       padding-top: 40px !important;
     }
 
-    .campaign-period-section{
+    .campaign-period-section, .winner-details{
 
       padding-bottom: 20px !important;
       .tagline{
