--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1219,7 +1219,7 @@ form {
 
 }
 
-.coke #main.home .prize-chance .wrapper .prize-inner-wrapper .prize-button-area .theme--light.v-btn{
+.coke #main.home .prize-button-area .theme--light.v-btn{
   background-color: red !important;
         color:#fff !important;
         padding: 30px;
