--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1045,8 +1045,6 @@ form {
     z-index: 1;
     text-align: center;
     .joox-image{
-      background:#de0a1c;
-      padding: 20px;
       @media only screen and (max-width: 600px) {
         padding: 10px;
       }
@@ -1054,6 +1052,7 @@ form {
       margin-top: 30px;
       margin-bottom: 40px;
       img{
+        border: solid 20px #de0a1c;
         width: 100%;
         max-width: 700px;
       }
