hide placeholder when user click #19

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1223,3 +1223,7 @@ form {
         color:#fff !important;
         padding: 30px;
 }
+
+input:focus::placeholder {
+  color: transparent !important;
+}
