--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -369,6 +369,13 @@ footer{
 .prize-swiper-container{
   z-index: 1;
   max-width: 1100px !important;
+  @media only screen and (max-width: 768px) {
+    max-width: 800px !important;
+  }
+  @media only screen and (max-width: 500px) {
+    max-width: 400px !important;
+  }
+
 }
 
 .prize-item{
