--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -416,7 +416,8 @@ footer{
 
   & .prize-description{
     font-size:$mobile-body-font-size;
-    height:calc(251px - 154px);
+    min-height:calc(300px - 154px);
+    height: auto;
     padding:10px;
     background: $secondary-color;
 
