--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1125,7 +1125,16 @@ form {
     justify-content: center;
     align-items: center;
     width: 100%;
-    max-width: 300px;
+    .list-reward{
+      max-width: 400px;
+      margin: auto;
+
+    }
+    .description{
+      text-align: center;
+      padding-bottom: 20px;
+    }
+
 }
 }
 
