--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1018,7 +1018,7 @@ form {
           }
         }
         .participate-text-container{
-            padding-left: 20px;
+            padding-left: 20px !important;
             text-align: left;
             h4{
               font-size: 20px;
