fix accept term and add padding

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -991,7 +991,7 @@ form {
        border: solid 1px #ffffff;
        justify-content: center;
        text-align: center;
-       padding: 20px;
+       padding: 20px !important;
        margin-bottom: 0px;
        .participate-image{
          max-height: 150px;
