New components for fanta added

--- a/assets/scss/fonts.scss
+++ b/assets/scss/fonts.scss
@@ -110,3 +110,10 @@
     -moz-osx-font-smoothing: grayscale;
     font-weight: 300;
 }
+
+@font-face {
+    font-family: "Hackney";
+    src: url('/fonts/HackneyPersonalUseOnly 2.ttf') format('truetype');
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
