--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -448,13 +448,14 @@ footer{
       border-radius: 100%;
       &-active{
         background:white !important;
+        border: 2px solid white
       }
     }
     & > *+*{
-      margin-left:40px;
+      margin-left:25px;
       &:before{
         content:'';
-          display:block;
+          display: none;
           position: absolute;
           top: calc(15px / 2);
           right:15px;
@@ -462,6 +463,7 @@ footer{
           height:1px;
           width:40px;
           background:$secondary-color;
+          
       }
     }
 
@@ -918,7 +920,8 @@ form {
       }
     }
     .prize-swiper-pagination .prize-swiper-pagination-bullet,.prize-swiper-pagination > * + *:before {
-      background :$fanta-prize-pagination-color;
+      background : none;
+      border: 2px solid white;
     }
   }
 }
